--- a/sample/just-hook/package.json
+++ b/sample/just-hook/package.json
@@ -10,7 +10,7 @@
   "author": "hoshimado",
   "license": "MIT",
   "dependencies": {
-    "hook-test-helper": "0.0.1",
+    "hook-test-helper": "^0.0.2",
     "cross-env": "^5.2.0"
   }
 }
